# fenix-startup-profiling

./: .gitignore  .pre-commit-config.yaml  MANUAL_WORKFLOW.md  Makefile  README.md  config.toml  main.py  pyproject.toml
merge-android-profiles/: 461.merge-android-profiles.js  556.merge-android-profiles.js  957.merge-android-profiles.js  merge-android-profiles.js
